--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 --find-links https://download.pytorch.org/whl/torch_stable.html
-torch==1.7.1+cpu
-numpy
-tqdm
-matplotlib
-hyperparams
-scipy
-PIL
+torch==1.7.1
+numpy==1.18.5
+tqdm==4.59.0
+matplotlib==3.3.2
+hyperopt==0.2.5
+scipy==1.5.2
+Pillow==7.2.0
